infer/tests/codetoanalyze/objc/errors/category_procdesc/EOCPerson.dot
digraph iCFG {
20 [label="20:  Call _fun_NSLog \n   n$1=_fun_NSString_stringWithUTF8String:(\"BTaking vacations\":char *) [line 19]\n  _fun_NSLog(n$1:struct objc_object *) [line 19]\n  REMOVE_TEMPS(n$1); [line 19]\n  APPLY_ABSTRACTION; [line 19]\n " shape="box"]
	

	 20 -> 19 ;
19 [label="19: Exit EOCPerson_takeVacationFromWork \n  " color=yellow style=filled]
	

18 [label="18: Start EOCPerson_takeVacationFromWork\nFormals:  self:class EOCPerson *\nLocals:  \n   DECLARE_LOCALS(&return); [line 18]\n  NULLIFY(&self,false); [line 18]\n " color=yellow style=filled]
	

	 18 -> 20 ;
17 [label="17:  Call _fun_NSLog \n   n$0=_fun_NSString_stringWithUTF8String:(\"Performing days at work\":char *) [line 15]\n  _fun_NSLog(n$0:struct objc_object *) [line 15]\n  REMOVE_TEMPS(n$0); [line 15]\n  APPLY_ABSTRACTION; [line 15]\n " shape="box"]
	

	 17 -> 16 ;
16 [label="16: Exit EOCPerson_performDaysWork \n  " color=yellow style=filled]
	

15 [label="15: Start EOCPerson_performDaysWork\nFormals:  self:class EOCPerson *\nLocals:  \n   DECLARE_LOCALS(&return); [line 14]\n  NULLIFY(&self,false); [line 14]\n " color=yellow style=filled]
	

	 15 -> 17 ;
14 [label="14: Exit EOCPerson_frontendChecks \n  " color=yellow style=filled]
	

13 [label="13: Start EOCPerson_frontendChecks\nFormals: \nLocals:  \n  " color=yellow style=filled]
	

	 13 -> 14 ;
12 [label="12: Exit NSDiscardableContent_frontendChecks \n  " color=yellow style=filled]
	

11 [label="11: Start NSDiscardableContent_frontendChecks\nFormals: \nLocals:  \n  " color=yellow style=filled]
	

	 11 -> 12 ;
10 [label="10: Exit NSSecureCoding_frontendChecks \n  " color=yellow style=filled]
	

9 [label="9: Start NSSecureCoding_frontendChecks\nFormals: \nLocals:  \n  " color=yellow style=filled]
	

	 9 -> 10 ;
8 [label="8: Exit NSCoding_frontendChecks \n  " color=yellow style=filled]
	

7 [label="7: Start NSCoding_frontendChecks\nFormals: \nLocals:  \n  " color=yellow style=filled]
	

	 7 -> 8 ;
6 [label="6: Exit NSMutableCopying_frontendChecks \n  " color=yellow style=filled]
	

5 [label="5: Start NSMutableCopying_frontendChecks\nFormals: \nLocals:  \n  " color=yellow style=filled]
	

	 5 -> 6 ;
4 [label="4: Exit NSCopying_frontendChecks \n  " color=yellow style=filled]
	

3 [label="3: Start NSCopying_frontendChecks\nFormals: \nLocals:  \n  " color=yellow style=filled]
	

	 3 -> 4 ;
2 [label="2: Exit NSObject_frontendChecks \n  " color=yellow style=filled]
	

1 [label="1: Start NSObject_frontendChecks\nFormals: \nLocals:  \n  " color=yellow style=filled]
	

	 1 -> 2 ;
}
